texi2html/test/invalid/author_outside_titlepage_quotation.texi
\input texinfo.tex    @c -*-texinfo-*-

@setfilename author_outside_titlepage_quotation.info

@node Top
@top top

@author Some One

@bye
